# python pyproject.toml configuration file

[build-system]
# make version from git
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# disable automatic module finding
py-modules = ["__main__"]

[tool.setuptools_scm]
# empty

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "infra-shared"
# version dynamic from git
dynamic = ["version"]
# demand reasonable new python
requires-python = ">=3.10"

dependencies = [
    # yaml handling
    "pyyaml",

    # template.py: jinja templating library
    "jinja2",

    # template.py: detection of text or binary
    "chardet",

    # tools.py: additional ssh/sftp connectivity
    "paramiko",

    # tooly.py: saltstack - saltcall for local tools building
    "salt>=3007.1",

    # authority.py, scripts/serve_once.py: cryptography - cryptographic recipes and primitives in python
    "cryptography",

    # scripts/write_removable.py: dbus handling for gdisk2 support, smart progress meter
    "dbus-python",
    # smart progress meter in write_removable
    "tqdm",

    # /scripts/port_forward.py; NAT-PMP - interact with NAT-PMP version 0 draft specification gateways
    # XXX 202505 disabled, because on jules (ubuntu 24.04) vm, netifaces breaks build
    # "NAT-PMP",

    # add ipykernel, to be able to use this venv as notebook kernel
    "ipykernel",

    # pulumi - imperativ infrastructure delaration using python
    "pulumi>=3.0.0,<4.0.0",
    # pip is needed for pulumi package auto detection
    "pip",
    # pulumi modules used in authorithy and tools
    "pulumi-command",
    "pulumi-random",
    "pulumi-tls",

]

[project.optional-dependencies]
docs = [
    # mkdocs - Project documentation with Markdown
    "mkdocs",

    # A Mermaid graphs plugin for MkDocs
    "mkdocs-mermaid2-plugin",

    # Python implementation of Lunr.js (for mkdocs)
    "lunr",

    # MkDocs plugin to add a last updated date to your site
    "mkdocs-git-revision-date-localized-plugin",

    # Plugin to generate a single PDF file from a MkDocs
    "mkdocs-with-pdf",

    # MkDocs plugin to automagically generate relative links
    "mkdocs-ezlinks-plugin",

    # Open source plugin for Mkdocs page redirects
    "mkdocs-redirects",

    # Material design theme for MkDocs
    "mkdocs-material",

    # Markdown extension resources for MkDocs Material
    "mkdocs-material-extensions",

    # MkDocs Material additions used for pymdownx
    "mkdocs_pymdownx_material_extras",
]

dev = [
    # This syntax means "install this package with the 'docs' extra"
    "infra-shared[docs]", 
    # "pytest", # example for future test dependencies
    # "ruff",   # example for future linting dependencies
]
