# python pyproject.toml configuration file

[build-system]
# make version from git
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# disable automatic module finding
py-modules = ["__main__"]

[tool.setuptools_scm]
# empty

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportOptionalMemberAccess = false
reportAny = false
reportUnannotatedClassAttribute = false
reportCallInDefaultInitializer = false

[project]
name = "infra-shared"
# version dynamic from git
dynamic = ["version"]
# demand reasonable new python
requires-python = ">=3.11"

dependencies = [
    # yaml handling
    "pyyaml",
    # template.py: jinja templating library
    "jinja2",
    # template.py: detection of text or binary
    "chardet",
    # tools.py: additional ssh/sftp connectivity
    "paramiko",
    # authority.py, scripts/serve_once.py: cryptography - cryptographic recipes and primitives in python
    "cryptography",
    # scripts/write_removable.py: dbus handling for gdisk2 support, smart progress meter
    "dbus-python",
    # smart progress meter in write_removable
    "tqdm",
    # /scripts/port_forward.py; NAT-PMP - interact with NAT-PMP version 0 draft specification gateways
    "netifaces",
    "NAT-PMP",
    # add ipykernel, to be able to use this venv as notebook kernel
    "ipykernel",

    # tooly.py: saltstack - saltcall for local tools building
    "salt>=3007.1",
    # include sometimes missing dependencies, add passlib and bcrypt for utils.pycrypto workaround
    "distro",
    "looseversion",
    "msgpack",
    "passlib",
    "bcrypt",

    # pulumi - imperativ infrastructure delaration using python
    "pulumi>3.200.0,<4.0.0",
    # XXX: pin grpcio to minimum used python-pulumi grpcio version on build time, which is >= 1.71.0 for >=3.200
    "grpcio>=1.71.0",
    # pip is needed for pulumi package auto detection
    "pip",
    # pulumi modules used in authority, tools, os and butane pulumi modules
    "pulumi-command",       # pulumi-command - execute commands locally or remotely as resource
    "pulumi-libvirt",       # pulumi-libvirt - creating and managing libvirt cloud resources
    "pulumi-postgresql",    # pulumi-postgresql - creating and managing postgresql cloud resources
    "pulumi-random",        # pulumi-random - safely use randomness
    "pulumi-tls",           # pulumi-tls - create TLS resources
    "pulumiverse_purrl",    # pulumiverse_purrl - native provider for making HTTP API calls
]


[project.optional-dependencies]

embedded = [
    # esphome - Solution for ESP8266/ESP32 projects with MQTT and Home Assistant
    # XXX we want a newer version, but any > 2025.7 requires protobuf >= 6 which pulumi current ~3.200  does not support.
    "esphome>=2025.7.1",
]

examples = [
    # pulumi-postgresql - needed for examples/safe
    "pulumi-postgresql",
    # marimo - needed for examples/notebooks/storage-write-book.py
    "marimo",
    # phao-mqtt - needed for examples/notebooks/mqtt-book.ipynb
    "paho-mqtt",
]

dev = [
    # This syntax means: "install this package (itself) with the 'docs' extra"
    "infra-shared[docs]",
    "infra-shared[embedded]",
    "infra-shared[examples]",
    # ruff - An extremely fast Python linter and code formatter, written in Rust.
    "ruff",
    # ty - An extremely fast Python type checker and language server, written in Rust.
    "ty",
    # pytest - simple powerful testing with Python
    "pytest",
]

docs = [
    # mkdocs - Project documentation with Markdown
    "mkdocs",
    # A Mermaid graphs plugin for MkDocs
    "mkdocs-mermaid2-plugin",
    # Python implementation of Lunr.js (for mkdocs)
    "lunr",
    # MkDocs plugin to add a last updated date to your site
    "mkdocs-git-revision-date-localized-plugin",
    # Plugin to generate a single PDF file from a MkDocs
    "mkdocs-with-pdf",
    # MkDocs plugin to automagically generate relative links
    "mkdocs-ezlinks-plugin",
    # Open source plugin for Mkdocs page redirects
    "mkdocs-redirects",
    # Material design theme for MkDocs
    "mkdocs-material",
    # Markdown extension resources for MkDocs Material
    "mkdocs-material-extensions",
    # MkDocs Material additions used for pymdownx
    "mkdocs_pymdownx_material_extras",
    # Mkdocs includer plugin
    "mkdocs-include-markdown-plugin",
]
