# python pyproject.toml configuration file

[build-system]
# make version from git
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# disable automatic module finding
py-modules = ["__main__"]

[tool.setuptools_scm]
# empty

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "athome"
# version dynamic from git
dynamic = ["version"]
# demand reasonable new python
requires-python = ">=3.10"

dependencies = [

### Pulumi

# pulumi - imperativ infrastructure delaration using python
"pulumi>=3.0.0,<4.0.0",

# pip is needed for pulumi package auto detection
"pip",

# pulumi modules
"pulumi-command",
"pulumi-docker",
"pulumi-gitea",
"pulumi-keycloak",
"pulumi-libvirt",
"pulumi-postgresql",
"pulumi-random",
"pulumi-tls",
# pulumi_synced_folder - synchronizes local folder to S3, Azure Storage, Google Storage
"pulumi_synced_folder",
# pulumiverse_purrl - make HTTP get/put/post API calls to your target endpoint
"pulumiverse_purrl",
"pulumiverse_time",

# pulumi-azure-native - Native Azure Pulumi Provider
# "pulumi-azure-native",
# pulumi-gcp - Google Cloud Platform (GCP) Pulumi resource
# "pulumi-gcp",
# pulumi-hcloud - manage Hetzner Cloud resources
# "pulumi-hcloud",
# pulumiverse_gandi - Pulumi provider for Gandi domains / cloud
# "pulumiverse_gandi",
# pulumi-github - Pulumi package to facilitate interacting with GitHub
# "pulumi-github",
# pulumiverse-harbor - manage Harbor (artifacts registry) resources
# "pulumiverse-harbor",
# "pulumi-cloudinit",
# "pulumi-kubernetes",
# "pulumi-minio",
# "pulumi-mysql",
# "pulumi-nomad",
# "pulumi-vault",
# "pulumiverse_acme",
# "pulumiverse_matchbox",
# "pulumiverse-sentry",


### Tools

# saltstack: local building
# try to pin a working version
"salt>=3007.1",
# "backports.ssl_match_hostname",

# yaml handling
"pyyaml",

# jinja templating library
"jinja2",

# detection of text or binary
"chardet",

# tools.py: additional ssh/sftp connectivity
"paramiko",

# authority.py, scripts/serve_once.py: cryptography - cryptographic recipes and primitives in python
"cryptography",

# scripts/write_removable.py: dbus handling for gdisk2 support, smart progress meter
"dbus-python",
# smart progress meter
"tqdm",

# use this venv as jupyter kernel (needs ipykernel installed)
"ipykernel",

# have ipython tinkering available
"ipython",

# have marimo available for more interactive tinkering
"marimo",

# pre commit checks
"pre-commit",

# phao-mqtt - mqtt library for publish and subscribe to mqtt messages
"paho-mqtt",

# Python implementation of Pulumi passphrase encryption and decryption
# "pulumi-crypto = {url = "https://github.com/sammck/pulumi-crypto/archive/refs/tags/v1.1.0.tar.gz"}

# /scripts/port_forward.py; NAT-PMP - interact with NAT-PMP version 0 draft specification gateways
"NAT-PMP",

# homeassistant kernel
"hass-pyscript-kernel",


### Docs

# mkdocs - Project documentation with Markdown
"mkdocs",

# A Mermaid graphs plugin for MkDocs
"mkdocs-mermaid2-plugin",

# Python implementation of Lunr.js (for mkdocs)
"lunr",

# MkDocs plugin to add a last updated date to your site
"mkdocs-git-revision-date-localized-plugin",

# Plugin to generate a single PDF file from a MkDocs
"mkdocs-with-pdf",

# MkDocs plugin to automagically generate relative links
"mkdocs-ezlinks-plugin",

# Open source plugin for Mkdocs page redirects
"mkdocs-redirects",

# Material design theme for MkDocs
"mkdocs-material",

# Markdown extension resources for MkDocs Material
"mkdocs-material-extensions",

# MkDocs Material additions used for pymdownx
"mkdocs_pymdownx_material_extras",

# Python-Markdown extension which provides an "include" function
"markdown-include",

### Notebooks

### optional basic DataScientist
"bokeh",
"pandas",
"scipy",

]
