# python pyproject.toml configuration file

[build-system]
# make version from git
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# disable automatic module finding
py-modules = ["__main__"]

[tool.setuptools_scm]
# empty

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "project_name"
# set version dynamic from git
dynamic = ["version"]
# demand a reasonable new python
requires-python = ">=3.11"

dependencies = [
    # yaml handling
    "pyyaml",
    # template.py: jinja templating library
    "jinja2",
    # template.py: detection of text or binary
    "chardet",
    # tools.py: additional ssh/sftp connectivity
    "paramiko",
    # authority.py, scripts/serve_once.py: cryptography - cryptographic recipes and primitives in python
    "cryptography",
    # scripts/write_removable.py: dbus handling for gdisk2 support, smart progress meter
    "dbus-python",
    # smart progress meter in write_removable
    "tqdm",
    # /scripts/port_forward.py; NAT-PMP - interact with NAT-PMP version 0 draft specification gateways
    "netifaces",
    "NAT-PMP",
    # add ipykernel, to be able to use this venv as notebook kernel
    "ipykernel",

    # tooly.py: saltstack - saltcall for local tools building
    "salt>=3007.1",
    # include sometimes missing dependencies, add passlib and bcrypt for utils.pycrypto workaround
    "distro",
    "looseversion",
    "msgpack",
    "passlib",
    "bcrypt",

    # pulumi - imperativ infrastructure delaration using python
    "pulumi>3.200.0,<4.0.0",
    # XXX: pin grpcio to minimum used python-pulumi grpcio version on build time, which is >= 1.71.0 for >=3.200
    "grpcio>=1.71.0",
    # pip is needed for pulumi package auto detection
    "pip",
    # pulumi modules used in authority, tools, os and butane pulumi modules
    "pulumi-command",       # pulumi-command - execute commands locally or remotely as resource
    "pulumi-libvirt",       # pulumi-libvirt - creating and managing libvirt cloud resources
    "pulumi-postgresql",    # pulumi-postgresql - creating and managing postgresql cloud resources
    "pulumi-random",        # pulumi-random - safely use randomness
    "pulumi-tls",           # pulumi-tls - create TLS resources
    "pulumiverse_purrl",    # pulumiverse_purrl - native provider for making HTTP API calls

    # additional pulumi modules
    # "abklabs/pulumi-runner",  # pulumi-runner -alternative way to run scripts locally and remotely
    # "pulumi-azure-native",    # pulumi-azure-native - Native Azure Pulumi Provider
    # "pulumi-cloudinit",   # pulumi-cloudinit - creating and managing cloudinit cloud resources
    # "pulumi-docker",      # pulumi-docker - interacting with Docker
    # "pulumi-gcp",         # pulumi-gcp - Google Cloud Platform (GCP) Pulumi resource
    # "pulumi-gitea",       # pulumi-gitea - creating and managing Gitea resources
    # "pulumi-github",      # pulumi-github - creating and managing github cloud resources
    # "pulumi-gitlab",      # pulumi-gitlab - creating and managing gitlab cloud resources
    # "pulumi-hcloud",      # pulumi-hcloud - creating and managing Hetzner hcloud cloud resources
    # "pulumi-keycloak",    # pulumi-keycloak - creating and managing keycloak cloud resources
    # "pulumi-kubernetes",  # pulumi-kubetnetes - creating and managing Kubernetes resources
    # "pulumi-minio",       # pulumi-minio - creating and managing minio cloud resources
    # "pulumi-mysql",       # pulumi-mysql - creating and managing mysql cloud resources
    # "pulumi-vault",       # pulumi-vault - creating and managing HashiCorp Vault cloud resources
    # "pulumi_synced_folder",   # pulumi_synced_folder - synchronizes local folder to S3, Azure Storage, Google Storage
    # "pulumiverse-harbor", # pulumiverse-harbor - creating and managing Harbor (artifacts registry) resources
    # "pulumiverse-sentry", # pulumi-sentry - creating and managing Sentry resources
    # "pulumiverse_acme",   # pulumiverse_acme - creating and managing ACME cloud resources
    # "pulumiverse_gandi",  # pulumiverse_gandi - creating and managing gandi cloud resources
    # "pulumiverse-ovh",    # pulumiverse-ovh - creating and managing OVH cloud resources
    # "pulumiverse_matchbox",   # pulumiverse_matchbox - creating and managing the Matchbox iPXE server
    # "pulumiverse_time",   # pulumiverse_time - creating and managing Time resources

    # esphome - Solution for ESP8266/ESP32 projects with MQTT and Home Assistant
    # XXX we want a newer version, but any > 2025.7 requires protobuf >= 6 which pulumi current ~3.200  does not support.
    # "esphome>=2025.7.1",
    # phao-mqtt - mqtt library for publish and subscribe to mqtt messages
    # "paho-mqtt",

]

[project.optional-dependencies]

docs = [
    # mkdocs - Project documentation with Markdown
    "mkdocs",
    # A Mermaid graphs plugin for MkDocs
    "mkdocs-mermaid2-plugin",
    # Python implementation of Lunr.js (for mkdocs)
    "lunr",
    # MkDocs plugin to add a last updated date to your site
    "mkdocs-git-revision-date-localized-plugin",
    # Plugin to generate a single PDF file from a MkDocs
    "mkdocs-with-pdf",
    # MkDocs plugin to automagically generate relative links
    "mkdocs-ezlinks-plugin",
    # Open source plugin for Mkdocs page redirects
    "mkdocs-redirects",
    # Material design theme for MkDocs
    "mkdocs-material",
    # Markdown extension resources for MkDocs Material
    "mkdocs-material-extensions",
    # MkDocs Material additions used for pymdownx
    "mkdocs_pymdownx_material_extras",
    # Mkdocs includer plugin
    "mkdocs-include-markdown-plugin",
]

dev = [
    # This syntax means: "install this package (itself) with the 'docs' extra"
    "project_name[docs]",
    # have marimo and basic DataScientist available for more interactive tinkering
    "marimo",
    "bokeh",
    "pandas",
    "scipy",
    # ruff - An extremely fast Python linter and code formatter, written in Rust.
    "ruff",
    # ty - An extremely fast Python type checker and language server, written in Rust.
    "ty",
    # "pytest", # example for future test dependencies
]
